--- a/views/articles/how-much-protein-should-you-munch.ejs
+++ b/views/articles/how-much-protein-should-you-munch.ejs
@@ -8,7 +8,7 @@
 	<link rel="icon" href="/images/site-wide-resources/bulqup-icon.png">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>How much protein should you munch?</title>
+	<title>5x5 Workout</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
@@ -19,6 +19,7 @@
 
 	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="/css/newHome/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="/css/newHome/newHomepage.css"/>
@@ -30,6 +31,11 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+		<style>
+	    body {
+            font-family: 'Roboto', sans-serif;
+        }
+	</style>
 
 </head>
 
